--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,9 @@ requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.8",
     "numpy>=2.4.2",
+    "python-box>=7.3.2",
+    "safetensors>=0.7.0",
     "torch>=2.10.0",
+    "tqdm>=4.67.3",
+    "wandb>=0.25.0",
 ]
