8の字モデルの修正

--- a/kadai1/1-8/conf/config.yaml
+++ b/kadai1/1-8/conf/config.yaml
@@ -1,18 +1,18 @@
 wandb:
   project_name: "daimon1"
-  train_name: "dummy"
+  train_name: "fnn_input5"
   config:
     device: "cuda:0"
 
 gen_data:
-  points_per_round: 100
+  points_per_round: 50
   num_rounds: 5
   min: 0
   max: 2 # ここでは np.pi と書けないので π を除いています
-  data_length: 500
+  #data_length: 500
   
 train_data:
-  input_timestep: 10
+  input_timestep: 5
   split_ratio: [0.7, 0.2, 0.1]
   batch_size: 50
   epoch: 1000
@@ -21,5 +21,5 @@ model:
   hidden_dim: 10
 
 optimizer:
-  learning_rate: 1.0e-4
+  learning_rate: 1.0e-3
   weight_decay: 1.0e-6
