--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "numpy>=2.4.2",
     "python-box>=7.3.2",
     "safetensors>=0.7.0",
+    "scikit-learn>=1.8.0",
     "torch>=2.10.0",
     "torchvision>=0.25.0",
     "tqdm>=4.67.3",
